--- a/vyos.yml
+++ b/vyos.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   tasks:
     # TODO: add NAT
-    # TODO: setup conntrack
+    # TODO: setup WAN fail-over
     - name: "Gather Config"
       vyos.vyos.vyos_facts:
         gather_subset: "config"
@@ -780,6 +780,14 @@
                     protocol: "vrrp"
                     source:
                       address: "10.9.0.{{ vyos__peer_host_id_ipv4 }}"
+                  - number: 20
+                    description: "Allow conntrack-sync ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "udp"
+                    destination:
+                      port: 3780
+                    source:
+                      address: "10.9.0.{{ vyos__peer_host_id_ipv4 }}"
               - name: "LOCAL-from-UNIFI-MAN-v4"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
@@ -1087,6 +1095,13 @@
                     protocol: "vrrp"
                     destination:
                       address: "10.9.0.{{ vyos__peer_host_id_ipv4 }}"
+                  - number: 20
+                    description: "Allow conntrack-sync ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "udp"
+                    destination:
+                      address: "10.9.0.{{ vyos__peer_host_id_ipv4 }}"
+                      port: 3780
               - name: "UNIFI-MAN-from-HOME-v4"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
@@ -1663,6 +1678,25 @@
     #
     # Services
     #
+    - name: "Setup connection-tracking synchronization"
+      vyos.vyos.vyos_config:
+        lines:
+          # Configure Conntrack
+          - "set system conntrack modules ftp disable"
+          - "set system conntrack modules h323 disable"
+          - "set system conntrack modules nfs disable"
+          - "set system conntrack modules pptp disable"
+          - "set system conntrack modules sip disable"
+          - "set system conntrack modules sqlnet disable"
+          - "set system conntrack modules tftp disable"
+          # Configure Synchronization
+          - "set service conntrack-sync accept-protocol 'tcp,udp,icmp'"
+          - "set service conntrack-sync event-listen-queue-size 8"
+          - "set service conntrack-sync failover-mechanism vrrp sync-group MAIN"
+          - "set service conntrack-sync interface {{ vyos__lan_interface }}.9 peer 10.9.0.{{ vyos__peer_host_id_ipv4 }}"
+          - "set service conntrack-sync interface {{ vyos__lan_interface }}.9"
+          - "set service conntrack-sync sync-queue-size 8"
+        save: yes
     - name: "Setup SSH"
       vyos.vyos.vyos_config:
         lines:
